--- a/.env.local.example
+++ b/.env.local.example
@@ -4,3 +4,28 @@ OPENAI_API_KEY="sk-123..."
 # Create an OpenAI Assistant at https://platform.openai.com/assistants
 # IMPORTANT! Be sure to enable file search and code interpreter tools.
 OPENAI_ASSISTANT_ID="123..."
+
+# IMPORTANT! Define the following function:
+# {
+#   "name": "get_weather",
+#   "description": "Determine weather in my location",
+#   "parameters": {
+#     "type": "object",
+#     "properties": {
+#       "location": {
+#         "type": "string",
+#         "description": "The city and state e.g. San Francisco, CA"
+#       },
+#       "unit": {
+#         "type": "string",
+#         "enum": [
+#           "c",
+#           "f"
+#         ]
+#       }
+#     },
+#     "required": [
+#       "location"
+#     ]
+#   }
+# }
